--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,13 +1,17 @@
 version: '3.8'
 
+# Production Docker Compose
+# Ishlatish: docker-compose up -d
+
 services:
-  # PostgreSQL ma'lumotlar bazasi
+  # PostgreSQL ma'lumotlar bazasi (Production uchun)
+  # SQLite ishlatilsa, bu service kerak emas
   db:
     image: postgres:15
     environment:
-      POSTGRES_DB: tanlov_ai
-      POSTGRES_USER: postgres
-      POSTGRES_PASSWORD: password
+      POSTGRES_DB: ${DB_NAME:-tanlov_ai}
+      POSTGRES_USER: ${DB_USER:-postgres}
+      POSTGRES_PASSWORD: ${DB_PASSWORD:-password}
     volumes:
       - postgres_data:/var/lib/postgresql/data
       - ./scripts/init_db.sql:/docker-entrypoint-initdb.d/init_db.sql
@@ -18,6 +22,7 @@ services:
       interval: 30s
       timeout: 10s
       retries: 3
+    # profiles: ["postgres"]  # Faqat --profile postgres bilan ishga tushadi
 
   # Redis
   redis:
@@ -40,7 +45,7 @@ services:
     command: >
       sh -c "python manage.py migrate &&
              python manage.py collectstatic --noinput &&
-             gunicorn tanlov_ai.wsgi:application --bind 0.0.0.0:8000"
+             gunicorn tanlov_ai.wsgi:application --bind 0.0.0.0:8000 --workers 4"
     volumes:
       - .:/app
       - media_files:/app/media
@@ -49,17 +54,23 @@ services:
       - "8000:8000"
     environment:
       - DEBUG=False
-      - DB_HOST=db
-      - DB_NAME=tanlov_ai
-      - DB_USER=postgres
-      - DB_PASSWORD=password
+      - SECRET_KEY=${SECRET_KEY:-change-me-in-production}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      - OPENAI_MODEL=${OPENAI_MODEL:-gpt-4o-mini}
+      # SQLite (default)
+      # PostgreSQL ishlatish uchun quyidagilarni uncomment qiling:
+      # - DB_ENGINE=postgresql
+      # - DB_HOST=db
+      # - DB_NAME=${DB_NAME:-tanlov_ai}
+      # - DB_USER=${DB_USER:-postgres}
+      # - DB_PASSWORD=${DB_PASSWORD:-password}
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
     depends_on:
-      db:
-        condition: service_healthy
       redis:
         condition: service_healthy
+      # db:  # PostgreSQL ishlatilganda uncomment qiling
+      #   condition: service_healthy
     healthcheck:
       test: ["CMD", "curl", "-f", "http://localhost:8000/api/health/"]
       interval: 30s
@@ -77,15 +88,19 @@ services:
       - media_files:/app/media
     environment:
       - DEBUG=False
-      - DB_HOST=db
-      - DB_NAME=tanlov_ai
-      - DB_USER=postgres
-      - DB_PASSWORD=password
+      - SECRET_KEY=${SECRET_KEY:-change-me-in-production}
+      - OPENAI_API_KEY=${OPENAI_API_KEY}
+      # SQLite (default)
+      # - DB_ENGINE=postgresql
+      # - DB_HOST=db
+      # - DB_NAME=${DB_NAME:-tanlov_ai}
+      # - DB_USER=${DB_USER:-postgres}
+      # - DB_PASSWORD=${DB_PASSWORD:-password}
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
     depends_on:
-      - db
       - redis
+      # - db  # PostgreSQL uchun
     healthcheck:
       test: ["CMD", "celery", "inspect", "ping"]
       interval: 30s
@@ -102,15 +117,18 @@ services:
       - .:/app
     environment:
       - DEBUG=False
-      - DB_HOST=db
-      - DB_NAME=tanlov_ai
-      - DB_USER=postgres
-      - DB_PASSWORD=password
+      - SECRET_KEY=${SECRET_KEY:-change-me-in-production}
+      # SQLite (default)
+      # - DB_ENGINE=postgresql
+      # - DB_HOST=db
+      # - DB_NAME=${DB_NAME:-tanlov_ai}
+      # - DB_USER=${DB_USER:-postgres}
+      # - DB_PASSWORD=${DB_PASSWORD:-password}
       - CELERY_BROKER_URL=redis://redis:6379/0
       - CELERY_RESULT_BACKEND=redis://redis:6379/0
     depends_on:
-      - db
       - redis
+      # - db  # PostgreSQL uchun
     healthcheck:
       test: ["CMD", "pgrep", "-f", "celery"]
       interval: 30s
