--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,6 @@
 Django==5.0.1
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.3.1
 django-cors-headers==4.3.1
 psycopg2-binary==2.9.9
 pgvector==0.2.4
@@ -16,6 +17,7 @@ unstructured==0.11.6
 PyPDF2==3.0.1
 pandas==2.1.4
 openpyxl==3.1.2
+xlsxwriter==3.1.9
 python-magic==0.4.27
 pillow==10.1.0
 scikit-learn==1.3.2
@@ -27,3 +29,6 @@ gunicorn==21.2.0
 python-docx==1.1.0
 pytesseract==0.3.10
 lxml>=4.9.0
+reportlab==4.0.8
+pytest==7.4.4
+pytest-django==4.7.0
