--- a/requirements.txt
+++ b/requirements.txt
@@ -1,34 +1,223 @@
+aiohappyeyeballs==2.6.1
+aiohttp==3.13.3
+aiosignal==1.4.0
+alembic==1.18.1
+amqp==5.3.1
+annotated-doc==0.0.4
+annotated-types==0.7.0
+anyio==4.12.1
+appdirs==1.4.4
+asgiref==3.11.0
+attrs==25.4.0
+backoff==2.2.1
+bcrypt==5.0.0
+beautifulsoup4==4.14.3
+billiard==4.2.4
+build==1.4.0
+cachetools==6.2.4
+celery==5.3.4
+certifi==2026.1.4
+chardet==5.2.0
+charset-normalizer==3.4.4
+chroma-hnswlib==0.7.3
+chromadb==0.4.24
+click==8.3.1
+click-didyoumean==0.3.1
+click-plugins==1.1.1.2
+click-repl==0.3.0
+cohere==5.20.1
+coloredlogs==15.0.1
+crewai==0.36.0
+dataclasses-json==0.6.7
+deepdiff==8.6.1
+distro==1.9.0
 Django==5.0.1
+django-cors-headers==4.3.1
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.1
-django-cors-headers==4.3.1
-psycopg2-binary==2.9.9
-pgvector==0.2.4
-celery==5.3.4
-redis==5.0.1
-langchain==0.2.16
-langchain-openai==0.1.8
-langchain-community==0.2.11
-tenacity==8.2.3
-crewai==0.36.0
-openai>=1.26.0
-ollama==0.1.7
-unstructured==0.11.6
-PyPDF2==3.0.1
-pandas==2.1.4
-openpyxl==3.1.2
-xlsxwriter==3.1.9
-python-magic==0.4.27
-pillow==10.1.0
-scikit-learn==1.3.2
-numpy==1.26.4
-python-dotenv==1.0.0
+docstring_parser==0.16
 drf-spectacular==0.26.5
-whitenoise==6.6.0
+durationpy==0.10
+embedchain==0.1.122
+emoji==2.15.0
+et_xmlfile==2.0.0
+fastapi==0.128.0
+fastavro==1.12.1
+filelock==3.20.3
+filetype==1.2.0
+flatbuffers==25.12.19
+frozenlist==1.8.0
+fsspec==2026.1.0
+google-api-core==2.29.0
+google-auth==2.47.0
+google-cloud-aiplatform==1.115.0
+google-cloud-bigquery==3.40.0
+google-cloud-core==2.5.0
+google-cloud-resource-manager==1.16.0
+google-cloud-storage==2.19.0
+google-crc32c==1.8.0
+google-genai==1.2.0
+google-resumable-media==2.8.0
+googleapis-common-protos==1.72.0
+gptcache==0.1.44
+greenlet==3.3.0
+grpc-google-iam-v1==0.14.3
+grpcio==1.76.0
+grpcio-status==1.71.2
 gunicorn==21.2.0
-python-docx==1.1.0
+h11==0.16.0
+h2==4.3.0
+hf-xet==1.2.0
+hpack==4.1.0
+httpcore==1.0.9
+httptools==0.7.1
+httpx==0.25.2
+huggingface_hub==1.3.2
+humanfriendly==10.0
+hyperframe==6.1.0
+idna==3.11
+importlib_metadata==8.7.1
+importlib_resources==6.5.2
+inflection==0.5.1
+iniconfig==2.3.0
+instructor==1.3.3
+jiter==0.4.2
+joblib==1.5.3
+jsonpatch==1.33
+jsonpath-python==1.1.4
+jsonpointer==3.0.0
+jsonref==1.1.0
+jsonschema==4.26.0
+jsonschema-specifications==2025.9.1
+kombu==5.6.2
+kubernetes==35.0.0
+langchain==0.2.16
+langchain-cohere==0.1.9
+langchain-community==0.2.11
+langchain-core==0.2.43
+langchain-experimental==0.0.64
+langchain-openai==0.1.8
+langchain-text-splitters==0.2.4
+langdetect==1.0.9
+langsmith==0.1.147
+lxml==6.0.2
+Mako==1.3.10
+markdown-it-py==4.0.0
+MarkupSafe==3.0.3
+marshmallow==3.26.2
+mdurl==0.1.2
+mem0ai==0.1.118
+mmh3==5.2.0
+monotonic==1.6
+mpmath==1.3.0
+multidict==6.7.0
+mypy_extensions==1.1.0
+networkx==3.6.1
+nltk==3.9.2
+numpy==1.26.4
+oauthlib==3.3.1
+ollama==0.1.7
+onnxruntime==1.23.2
+openai==1.109.1
+openpyxl==3.1.2
+opentelemetry-api==1.39.1
+opentelemetry-exporter-otlp-proto-common==1.39.1
+opentelemetry-exporter-otlp-proto-grpc==1.39.1
+opentelemetry-exporter-otlp-proto-http==1.39.1
+opentelemetry-instrumentation==0.60b1
+opentelemetry-instrumentation-asgi==0.60b1
+opentelemetry-instrumentation-fastapi==0.60b1
+opentelemetry-proto==1.39.1
+opentelemetry-sdk==1.39.1
+opentelemetry-semantic-conventions==0.60b1
+opentelemetry-util-http==0.60b1
+orderly-set==5.5.0
+orjson==3.11.5
+overrides==7.7.0
+packaging==24.2
+pandas==2.1.4
+pgvector==0.2.4
+Pillow==10.1.0
+pluggy==1.6.0
+portalocker==3.2.0
+posthog==3.25.0
+prompt_toolkit==3.0.52
+propcache==0.4.1
+proto-plus==1.27.0
+protobuf==5.29.5
+psycopg2-binary==2.9.9
+pulsar-client==3.9.0
+pyasn1==0.6.2
+pyasn1_modules==0.4.2
+pydantic==2.12.5
+pydantic_core==2.41.5
+Pygments==2.19.2
+PyJWT==2.10.1
+pypdf==4.3.1
+PyPDF2==3.0.1
+PyPika==0.50.0
+pyproject_hooks==1.2.0
+pysbd==0.3.4
 pytesseract==0.3.10
-lxml>=4.9.0
-reportlab==4.0.8
 pytest==7.4.4
 pytest-django==4.7.0
+python-dateutil==2.9.0.post0
+python-docx==1.1.0
+python-dotenv==1.0.0
+python-iso639==2025.11.16
+python-magic==0.4.27
+pytz==2025.2
+PyYAML==6.0.3
+qdrant-client==1.16.2
+RapidFuzz==3.14.3
+redis==5.0.1
+referencing==0.37.0
+regex==2023.12.25
+reportlab==4.0.8
+requests==2.32.5
+requests-oauthlib==2.0.0
+requests-toolbelt==1.0.0
+rich==13.9.4
+rpds-py==0.30.0
+rsa==4.9.1
+schema==0.7.8
+scikit-learn==1.3.2
+scipy==1.17.0
+shapely==2.1.2
+shellingham==1.5.4
+six==1.17.0
+sniffio==1.3.1
+soupsieve==2.8.2
+SQLAlchemy==2.0.45
+sqlparse==0.5.5
+starlette==0.50.0
+sympy==1.14.0
+tabulate==0.9.0
+tenacity==8.2.3
+threadpoolctl==3.6.0
+tiktoken==0.7.0
+tokenizers==0.22.2
+tqdm==4.67.1
+typer==0.21.1
+typer-slim==0.21.1
+types-requests==2.32.4.20260107
+typing-inspect==0.9.0
+typing-inspection==0.4.2
+typing_extensions==4.15.0
+tzdata==2025.3
+unstructured==0.11.6
+unstructured-client==0.22.0
+uritemplate==4.2.0
+urllib3==2.6.3
+uvicorn==0.40.0
+uvloop==0.22.1
+vine==5.1.0
+watchfiles==1.1.1
+wcwidth==0.2.14
+websocket-client==1.9.0
+websockets==14.2
+whitenoise==6.6.0
+wrapt==1.17.3
+XlsxWriter==3.1.9
+yarl==1.22.0
+zipp==3.23.0
