frontend some bugs fixed

--- a/frontend/.env.example
+++ b/frontend/.env.example
@@ -1,5 +1,5 @@
 # Local development: use http://localhost:8000/api
-VITE_API_BASE_URL=http://localhost:8000/api
+VITE_API_BASE_URL=https://tanlov.kuprikqurilish.uz/api
 
 # Production: use your production domain
 # VITE_API_BASE_URL=https://tanlov.kuprikqurilish.uz/api
